<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    android:orientation="vertical"
    tools:context="com.cg.historicalfiguresquiz.ArtistsActivity"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/score_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/score"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/score3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="0"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/artistsQuestion"
        android:layout_width="204dp"
        android:layout_height="103dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="84dp"
        android:layout_weight="0.97"
        android:adjustViewBounds="true" />

    <Button
        android:id="@+id/artistschoice1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/answer_button"
        android:text="@string/joseph_stalin"
        android:textColor="#fff"
        android:textStyle="bold|italic" />


    <Button
        android:id="@+id/artistschoice2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/answer_button"
        android:text="@string/vladimir_lenin"
        android:textColor="#fff"
        android:textStyle="bold|italic" />


    <Button
        android:id="@+id/artistschoice3"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/answer_button"
        android:text="@string/napoleon_bonaparte"
        android:textColor="#fff"
        android:textStyle="bold|italic" />


    <Button
        android:id="@+id/artistschoice4"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/answer_button"
        android:text="@string/vladimir_putin"
        android:textColor="#fff"
        android:textStyle="bold|italic" />


</LinearLayout>
