<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cg.historicalfiguresquiz.CategoriesActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button2"
        android:onClick="buttonClick"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="35dp"
        android:alpha="0.85"
        android:background="@drawable/scientists_button"
        android:fontFamily="casual"
        android:shadowColor="@color/blue"
        android:text="@string/Science"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:onClick="buttonClickFunction"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_below="@id/button2"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="58dp"
        android:alpha="0.85"
        android:background="@drawable/politicians_button"
        android:fontFamily="casual"
        android:text="@string/Politicians"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="395dp"
        android:layout_height="82dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="34dp"
        android:alpha="0.85"
        android:background="@drawable/artists_button"
        android:fontFamily="casual"
        android:onClick="buttonClick2"
        android:text="@string/Art"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="266dp"
        android:layout_height="81dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="cursive"
        android:text="@string/Categories"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/brown"
        android:textSize="65sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="251dp"
        android:layout_height="435dp"
        app:srcCompat="@drawable/napoleonn"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.866" />


</android.support.constraint.ConstraintLayout>
